--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ volumes:
     hadoop_datanode3:
     hadoop_namenode:
     hadoop_historyserver:
-    
 networks:
     spark-net:
         driver: bridge
@@ -24,7 +23,7 @@ services:
       - 9000:9000
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
-      - ./nbs:/home/nbs
+      - ./Ccp:/home/Ccp
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -83,7 +82,7 @@ services:
     depends_on:
       - namenode
     networks:
-      - "spark-net"
+        - "spark-net"
     volumes:
       - hadoop_datanode1:/hadoop/dfs/data
     env_file:
@@ -96,7 +95,7 @@ services:
     depends_on:
       - namenode
     networks:
-      - "spark-net"
+        - "spark-net"
     volumes:
       - hadoop_datanode2:/hadoop/dfs/data
     env_file:
@@ -109,28 +108,75 @@ services:
     depends_on:
       - namenode
     networks:
-      - "spark-net"
+        - "spark-net"
     volumes:
       - hadoop_datanode3:/hadoop/dfs/data
     env_file:
       - ./hadoop.env
 
+  spark-master:
+    image: bde2020/spark-master:3.0.0-hadoop3.2
+    container_name: spark-master
+    depends_on:
+        - namenode
+    networks:
+        - "spark-net"
+    ports:
+        - "8080:8080"
+        - "7077:7077"
+    environment:
+        - INIT_DAEMON_STEP=setup_spark
+        - NAMENODE_HOSTNAME=namenode
+  
+  spark-worker-1:
+    image: bde2020/spark-worker:3.0.0-hadoop3.2
+    container_name: spark-worker-1
+    depends_on:
+        - spark-master
+        - namenode
+    networks:
+        - "spark-net"
+    ports:
+        - "8081:8081"
+    environment:
+        - "SPARK_MASTER=spark://spark-master:7077"            
+        - SPARK_WORKER_CORES=1
+        - SPARK_WORKER_MEMORY=512m
+        - NAMENODE_HOSTNAME=namenode
+
+  spark-worker-2:
+    image: bde2020/spark-worker:3.0.0-hadoop3.2
+    container_name: spark-worker-2
+    depends_on:
+        - spark-master
+        - namenode
+    networks:
+        - "spark-net"
+    ports:
+        - "8082:8082"
+    environment:
+        - "SPARK_MASTER=spark://spark-master:7077"            
+        - SPARK_WORKER_CORES=1
+        - SPARK_WORKER_MEMORY=512m
+        - NAMENODE_HOSTNAME=namenode
+  
   jupyter-notebook:
     container_name: jupyternb
     image: jupyter/all-spark-notebook:42f4c82a07ff
     depends_on:
-      - namenode
+        - spark-master
     expose:
-      - "8888"
+        - "8888"
     networks:
-      - "spark-net"
+        - "spark-net"
     user: root
     ports:
-      - "8888:8888"
+        - "8888:8888"
     volumes:
-      - ./nbs:/home/jovyan/work/nbs
+        - ./Ccp:/home/jovyan/work/Ccp
+        - ./events:/tmp/spark-events
     command: "start-notebook.sh \
-      --ip=0.0.0.0 \
-      --allow-root \
-      --NotebookApp.token=''  
-      "
+        --ip=0.0.0.0 \
+        --allow-root \
+        --NotebookApp.token=''  
+        "
