--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,7 @@ services:
   spark-master:
     image: bde2020/spark-master:3.0.0-hadoop3.2
     container_name: spark-master
+    restart: always
     depends_on:
         - namenode
     networks:
@@ -131,6 +132,7 @@ services:
   spark-worker-1:
     image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-1
+    restart: always
     depends_on:
         - spark-master
         - namenode
@@ -147,6 +149,7 @@ services:
   spark-worker-2:
     image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-2
+    restart: always
     depends_on:
         - spark-master
         - namenode
@@ -162,6 +165,7 @@ services:
   
   jupyter-notebook:
     container_name: jupyternb
+    restart: always
     image: jupyter/all-spark-notebook:42f4c82a07ff
     depends_on:
         - spark-master
